--- a/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
+++ b/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
@@ -50,6 +50,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System" />
