--- a/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
+++ b/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
@@ -75,7 +75,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="VideoFlux.vb" />
+    <Compile Include="Playlist.vb" />
+    <Compile Include="PlaylistItem.vb" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
