--- a/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
+++ b/MyWindowsMediaPlayer/MyWindowsMediaPlayer.vbproj
@@ -160,5 +160,8 @@
   <ItemGroup>
     <Resource Include="Resources\fullscreen.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\playlisthide.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
